# ICUscheduleCheckup

./: README.md  pyproject.toml
icuschedulecheckup/: lidi.toml  main.py  run.sh  test.xls  test_sluzby.xlsx
tests/: tests.py
